# universal-ffmpeg-recoder

./: .ffprobe.py  .gitignore  .python-version  Makefile  README.md  Untitled-1.py  build.spec  ffprobe.py  getjsonschema.py  languages.json  pyproject.toml  recode-common.py  recode.py  recode.spec  requirements.txt  schema.json  schema.yaml  test.py  universal-ffmpeg-recoder.code-workspace
.github/workflows/: release-on-version-bump.yml
Chris/: extract_objects.py  getjsonschema.py  schema.json
modules/: FileOperations.py  api.py  audio.py  datatypes.py  ffmpeg.py  logger.py  subs.py  video.py
src/recode/: main.py
src/recode/modules/: FileOperations.py  api.py  audio.py  datatypes.py  ffmpeg_utils.py  logger.py  parse_arguments.py  subs.py  video.py
