[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=61", "wheel"]

[project]
    description     = "Python script to recode film and tv-show library to the same codecs and file naming convention"
    name            = "universal-ffmpeg-recoder"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "1.0.3"

    license = "AGPL-3.0-or-later"

    authors = [{ name = "Flo Greistorfer" }]

    dependencies = [
        "Requests~=2.32.3",
        "colorama~=0.4.6",
        "genson~=1.3.0",
        "json_to_models~=0.0.4",
        "python-ffmpeg~=2.0.11",
        "python_dateutil~=2.9.0.post0",
        "python_json_logger~=4.0.0",
        "questionary~=2.1.1",
        "rich_argparse~=1.7.1",
    ]

    [project.scripts]
        recode = "recode.main:main"

[dependency-groups]
    dev = ["pyinstaller", "ruff"]

[tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools.package-data]
    recode = ["languages.json"]

[tool.ruff]
    line-length    = 140
    target-version = "py312"

    [tool.ruff.lint]
        ignore = ["E501"]
        select = ["B", "E", "F", "I", "UP"]

    [tool.ruff.format]
        indent-style = "space"
        quote-style  = "double"
